Target the icons that are adjacent to .bc-level-no and correct alignment

--- a/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
+++ b/client/src/document/ingredients/browser-compatibility-table/atoms/_bc-icons.scss
@@ -2,13 +2,17 @@
 
 .bc-icons {
   display: inline-block;
-
   .only-icon {
     vertical-align: middle;
-
     .ic-footnote {
       vertical-align: sub;
     }
+  }
+}
+
+.bc-level-no + .bc-icons {
+  .only-icon {
+    vertical-align: baseline;
   }
 }
 
